# caelum-api

./: .dockerignore  .gitignore  DEPLOYMENT_FIXER.md  DOCKER_SETUP.md  Dockerfile  README.md  TAILWIND_V4_GUIDE.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test_direct_mutation.py
app/: checkpointer.py  config.py  db.py  deps.py  main.py
app/agent/: graph.py  job_runner.py  prompts.py  prompts_new.py  state.py
app/agent/docs/: DESIGN_MANIFEST.md  aceternity-nextjs-doc.md  frontend-async-jobs.md
app/agent/models/: design_guidelines.py
app/agent/nodes/: architect.py  check.py  clarify.py  codegen.py  coder.py  deployer.py  deployment_fixer.py  design_blueprint_pdf.py  design_planner.py  designer.py  fix_errors.py  followup_codegen.py  generate_section.py  git_manager.py  git_sync.py  linting.py  planner.py  router.py  structurer.py
app/agent/prompts/: codegen.py  coder.py  designer.py  (+5 more)
app/models/: job.py  landing_page.py  user.py
app/routers/: agent.py  auth.py  files.py  jobs.py  landing_pages.py  uploads.py
app/utils/: __init__.py  data_analysis.py  jobs.py  jwt.py  landing_pages.py  security.py
data/: Sample_campaign_dataset(Sheet1).csv  Sample_experiment_dataset_Ignyte(Experiment 2).csv
scripts/: copy_template.sh  css_check.sh  deploy_to_vercel.sh  git_sync.sh  init_app.sh  install.sh  install_base_dependencies.sh  lint_project.sh  manage_dev_server.sh  run_app.sh  run_git_command.sh  run_npm_command.sh  run_npx_command.sh
template/: next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+48 files in other folders)
