[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.7",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "fastapi>=0.120.1",
    "uvicorn>=0.38.0",
    "requests>=2.32.5",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-google-genai>=3.0.0",
    "python-multipart>=0.0.20",
    "google-cloud-storage>=3.5.0",
    "google-cloud-secret-manager>=2.25.0",
    "langchain-mongodb>=0.7.1",
    "langgraph-checkpoint-mongodb>=0.2.2",
    "pymongo>=4.10.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "pydantic[email]>=2.11.7",
    "python-toon>=0.1.3",
]
